2017-05-21  Eric Herman <eric@freesa.org>

	always prefix an extra 00 of bytes used regardless of sign
	cleaner temp struct initialization in macro
	fix offset compensation for zero prefixing in test

	* src/ehbigint-priv.h: cleaner temp struct initialization
	* src/ehbigint-priv.c: always add an extra 00 regardless of sign
	* tests/test-from-binstr-to-binstr-round-trip.c: fix sign error
	* misc/pre-tidy.patch: respin


2017-04-29  Eric Herman <eric@freesa.org>

	finally figured out there was a bug in exp-mod, which caused
	is_probably_prime to fail from time to time ... was not doing
	an initial modulus on the base

	* src/ehbigint.c: fix bug with exp-mod, clarify, #define magic nums
	* src/ehbigint-log.c: improve debug, add "0b00101011" format to output
	* tests/test-comp-exp-mod-with-gmp.c: make non-trival, expose bug
	* tests/test-is-probably-prime.c: check a few more smallish primes
	* tests/test-from-binstr-to-binstr-round-trip.c: ignore zero byte pad
	* tests/test-mul.c: add a longer number
	* tests/test-shift-right.c: more tests
	* Makefile.am: use local ./libtool


2017-04-23  Eric Herman <eric@freesa.org>

	move stack-alloc defines to ehbigint-priv.h

	 * src/ehbigint.c: move stack-alloc defines to ehbigint-priv.h
	 * src/ehbigint-priv.h: moved stack-alloc defines from ehbigint.c
	 * misc/pre-tidy.patch: respin


2017-04-23  Eric Herman <eric@freesa.org>

	remove un-needed calls to strlen
	import new src/eba.h

	* src/ehbigint-str.c: remove un-needed calls to strlen
	* src/eba.h: pulled from upstream
	* misc/pre-tidy.patch: pulled from upstream


2017-04-08  Eric Herman <eric@freesa.org>

	Add ehbi_exp(result, base, exponent)
	Add ehbi_set_binary_string, ehbi_to_binary_string functions
	Copy in sources from libehstr git@github.com:ericherman/libehstr.git
	replace hex_raw and decimal_raw with origin functions in ehstr


	* src/ehbigint.h: add set_binary_str, to_binary_str, exp()
	* src/ehbigint-str.c: add set_binary, to_binary; exp,