@@ -1,9 +1,13 @@
 2017-05-21  Eric Herman <eric@freesa.org>
 
+	cleanup ehbi_subtract borrowing to make it easier to understand,
+	and fix possible bug.
+	collapse ebhi_dec into ehbi_subtract
 	always prefix an extra 00 of bytes used regardless of sign
 	cleaner temp struct initialization in macro
 	fix offset compensation for zero prefixing in test
 
+	* src/ehbigint.c: clarify subtract; collapse ebhi_dec into subtract
 	* src/ehbigint-priv.h: cleaner temp struct initialization
 	* src/ehbigint-priv.c: always add an extra 00 regardless of sign
 	* tests/test-from-binstr-to-binstr-round-trip.c: fix sign error
